Fixed Encumbrance Penalties wrap
• Closes #57

--- a/wfrp4e/css/wfrp4e.css
+++ b/wfrp4e/css/wfrp4e.css
@@ -3742,7 +3742,27 @@ input[type="text"], input[type="password"] {
           box-shadow: 0px 0px 1px inset black;
           background: none;
           height: 25px;
-        }       
+        }   
+        .wfrp4e .inventory .encumbrance-text {
+          margin-top: 0px;
+          padding: 5px 1px 0px 4px;
+          border-radius: 0px;
+          border-top-left-radius: 0px;
+          border-top-right-radius: 0px;
+          display: block;
+          width: 493px;
+          border: 1px solid #73695300;
+          box-shadow: none;
+          background: none;
+          height: 25px;
+          font-family: CaslonPro;
+          font-size: 14px;
+          font-weight: 500;
+          color: black;
+          position: relative;
+          top: -1px;
+          left: -2px;
+        }     
           .wfrp4e .inventory .encumbrance-bar {
             background: none;
             height: 21px;
@@ -3753,6 +3773,7 @@ input[type="text"], input[type="password"] {
             border-radius: 2px;
             display: inline-block;
             position: relative;
+            top: -25px;
             left: 0px;
             font-family: CaslonPro;
             font-size: 14px;
